<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".presentation.fragments.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Register"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_register"
        android:background="@drawable/top_rounded_light_40"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/iv_user_photo_register"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/user_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/Text_Login_Register"
            android:text="@string/username" />

        <EditText
            android:id="@+id/et_register_username"
            style="@style/EditText_Login_Register"
            android:autofillHints="name"
            android:hint="@string/enter_your_username"
            android:inputType="textPersonName" />

        <TextView
            style="@style/Text_Login_Register"
            android:layout_marginTop="15dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_register_email"
            style="@style/EditText_Login_Register"
            android:autofillHints="phone"
            android:hint="@string/enter_your_email_adress"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/Text_Login_Register"
            android:layout_marginTop="15dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_register_password"
            style="@style/EditText_Login_Register"
            android:autofillHints="password"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_blue_10"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/register"
        android:layout_above="@id/tv_login"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>