<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.login.LoginFragment">

    <LinearLayout
        android:layout_above="@id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp">

        <TextView
            style="@style/Text_Login_Register"
            android:layout_marginTop="15dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_login_email"
            style="@style/EditText_Login_Register"
            android:autofillHints="phone"
            android:hint="@string/enter_your_email_adress"
            android:inputType="textEmailAddress" />

        <TextView
            style="@style/Text_Login_Register"
            android:layout_marginTop="15dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_login_password"
            style="@style/EditText_Login_Register"
            android:autofillHints="password"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded_blue_10"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>